--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,11 @@
     <artifactId>cs2</artifactId>
     <modelVersion>4.0.0</modelVersion>
     <url>http://maven.apache.org</url>
-    <version>0.0.2</version>
+    <version>0.0.3</version>
+    <properties>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
+    </properties>
     <dependencies>
         <!-- https://mvnrepository.com/artifact/org.scala-lang/scala-library -->
         <dependency>
@@ -33,12 +37,12 @@
         <dependency>
             <groupId>org.scalafx</groupId>
             <artifactId>scalafx_2.12</artifactId>
-            <version>11-R16</version>
+            <version>15.0.1-R21</version>
         </dependency>
     </dependencies>
     <build>
-        <sourceDirectory>src/main</sourceDirectory>
-        <testSourceDirectory>src/test</testSourceDirectory>
+        <sourceDirectory>src/calculator</sourceDirectory>
+        <testSourceDirectory>src/tests</testSourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.scala-tools</groupId>
