fix structure and clarify methods

--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
         </dependency>
     </dependencies>
     <build>
-        <sourceDirectory>src/calculator</sourceDirectory>
+        <sourceDirectory>src/main</sourceDirectory>
         <testSourceDirectory>src/tests</testSourceDirectory>
         <plugins>
             <plugin>
